@@ -1,7 +1,8 @@
 <thead>
   <tr>
     <%
-    active_scaffold_config_for(record_class).subform.columns.each_column(for: record_class, crud_type: :read) do |column|
+    columns ||= active_scaffold_config_for(record_class).subform.columns
+    columns.each_column(for: record_class, crud_type: :read) do |column|
       next unless column.is_a? ActiveScaffold::DataStructures::Column
       next unless in_subform?(column, parent_record, parent_column)
       hidden = column_renders_as(column) == :hidden
